# speedrun

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  schema.sql
frontend/: index.html  package.json
frontend/src/: App.svelte  main.ts  routes.ts
frontend/src/lib/: schema.ts  stores.ts
frontend/src/view/: Counter.svelte  Index.svelte  Login.svelte  Task.svelte
tasks/task1/: task.yml
tasks/task1/distfiles/: output.txt  task.py
tasks/task2/: task.yml
tasks/task3/: task.yml
tasks/welcome/: task.yml
ui/: index.html  package.json
ui/src/: App.css  App.tsx  main.tsx
ui/src/lib/: api.ts
ui/src/view/: AdminTasks.tsx  AdminUsers.tsx  Index.tsx  Login.tsx  Task.tsx
